...
class _AddIncidentFormState extends State<AddIncidentForm> {
  final TextEditingController _titleController = TextEditingController();
  final TextEditingController _descriptionController = TextEditingController();
  String? _selectedLocation;

  final List<String> _locations = [
    '6 kilo',
    '5 kilo',
    '4 kilo',
    'sefereselam',
    'lideta',
  ];

...
                onPressed: _submitForm,
                style: ElevatedButton.styleFrom(
                  backgroundColor: const Color(0xFF794747),
                  padding: const EdgeInsets.symmetric(horizontal: 24),
                ),
                child: const Text(
                  'submit',
                  style: TextStyle(color: Colors.white),
                ),
              ),
            ],
          ),
        ),
...
